[gd_scene load_steps=10 format=3 uid="uid://dwma5jir68eaq"]

[ext_resource type="Texture2D" uid="uid://cygkm8b8gb4ei" path="res://assets/player_gmtk_2023.png" id="1_2q3ax"]
[ext_resource type="Script" path="res://player.gd" id="1_f17c6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bu4s6"]
size = Vector2(8, 6)

[sub_resource type="Animation" id="Animation_aobat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dkxfc"]
resource_name = "air"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_yiva0"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8hje8"]
resource_name = "move"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bnh4h"]
_data = {
"RESET": SubResource("Animation_aobat"),
"air": SubResource("Animation_dkxfc"),
"idle": SubResource("Animation_yiva0"),
"move": SubResource("Animation_8hje8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhyq7"]
size = Vector2(4, 3)

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_f17c6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 5)
shape = SubResource("RectangleShape2D_bu4s6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4, -4)
texture = ExtResource("1_2q3ax")
centered = false
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_bnh4h")
}

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(4, 4.5)
shape = SubResource("RectangleShape2D_yhyq7")

[node name="pit_detect" type="RayCast2D" parent="."]
position = Vector2(2, 8)
target_position = Vector2(0, 7)
collision_mask = 2

[node name="pit_warning" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 7)
collision_mask = 2

[node name="short_jump" type="RayCast2D" parent="."]
position = Vector2(8, -4)
target_position = Vector2(3, 0)
collision_mask = 10

[node name="hi_jump" type="RayCast2D" parent="."]
position = Vector2(8, -12)
target_position = Vector2(3, 0)
collision_mask = 10

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
